# rpi-3d-renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  scenegen.py
desktop/: CMakeLists.txt  loader.cpp  loader.h  main.cpp
docs/: Shpakovskiy-IU7-53B-TZ.docx  Shpakovskiy-IU7-53B-practice-report.docx  links.txt  todo.txt  Шпаковский ИУ7-53Б РПЗ.doc
docs/images/: alg.rsf  warnock.drawio  warnock_modified.drawio
docs/tex/: analysis.tex  biblio.bib  conclusion.tex  design.tex  intro.tex  report.tex  research.tex  techn.tex
docs/tex/inc/lst/: data.txt  data1.txt  data2.txt  plot.sh  sphere.scene  use1.cpp  use2.cpp  warnock.cpp  warnock1.cpp  warnock2.cpp
lib/fatfs-spi/: .gitignore  CMakeLists.txt
lib/fatfs-spi/ff15/documents/res/: app1.c  app2.c  app3.c  app4.c  app5.c  app6.c
lib/fatfs-spi/ff15/source/: diskio.c  diskio.h  ff.c  ff.h  ffconf.h  ffsystem.c  ffunicode.c
lib/fatfs-spi/include/: f_util.h  ff_stdio.h  my_debug.h  rtc.h  util.h
lib/fatfs-spi/sd_driver/: crc.c  crc.h  demo_logging.c  hw_config.h  sd_card.c  sd_card.h  sd_spi.c  sd_spi.h  spi.c  spi.h
lib/fatfs-spi/src/: f_util.c  ff_stdio.c  glue.c  my_debug.c  rtc.c
lib/ili9341/: CMakeLists.txt  GraphicsDisplay.cpp  GraphicsDisplay.h  SPI_TFT_ILI9341.cpp  SPI_TFT_ILI9341.h  SPI_TFT_ILI9341_NUCLEO.cpp  SPI_TFT_ILI9341_NXP.cpp  TextDisplay.cpp  TextDisplay.h  ili9341.c  mode0.c  mode0_demo.c  mode1.c  mode1_demo.c  mode2.c  mode2_demo.c
lib/ili9341/gfx/: CMakeLists.txt  font.h  gfx.c  gfx.h  gfxfont.h
lib/ili9341/ili9341/: CMakeLists.txt  ili9341.c  ili9341.h
lib/ili9341/include/ili9341/: ili9341.h
lib/ili9341/include/mode0/: mode0.h
lib/ili9341/include/mode1/: mode1.h
lib/ili9341/include/mode2/: mode2.h
lib/simple_example/: CMakeLists.txt  hw_config.c  simple_example.cpp
lib/st7789/: CMakeLists.txt
lib/st7789/gfx/: CMakeLists.txt  gfx.c  gfx.h
lib/st7789/st7789/: st7789.c  st7789.h
models/: cone.blend  cone.mtl  cone.scene  cube.scene  cubes.mtl  monkey.mtl  monkey.scene  sphere.blend  sphere.mtl  spheres.blend  spheres.mtl  spheres.scene  tree.blend  tree.mtl  tree.scene
renderer/: CMakeLists.txt  LogWAxe.mtl  color.h  common.h  cube.blend  cube.mtl  debug.cpp  debug.h  loader.cpp  loader.h  main.cpp  monkey.blend  monkey.mtl  pipeline.cpp  pipeline.h  render.cpp  render.h
renderer/math/: mat4.cpp  mat4.h  math3d.h  quat.cpp  quat.h  scalar.h  transform.cpp  transform.h  vec2.h  vec3.cpp  vec3.h  vec4.h
src/: allocator.cpp  allocator.h  dataset.cpp  dataset.h  display.h  hw_config.cpp  loader.cpp  loader.h  main.cpp
src/loader/: loader.cpp
src/math/: mat4.cpp  mat4.h  quat.cpp  quat.h  scalar.h  transform.h  vec3.cpp  vec4.h
src/render/: color.h  common.h  debug.cpp  debug.h  pipeline.cpp  pipeline.h  render.cpp  render.h
src/scene/: object.h  scene.h
